--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,8 +1,29 @@
+html *
+{
+   font-family: Arial !important;
+}
+
+body {
+    background-color: #f2efde;
+}
+
+fieldset { 
+	display: inline-block;
+}
+
+h1 {
+	text-align: center;
+}
+
 .msg-val {
 	color: red;
+	/* Initialize as invisible so the angular {} syntax will not show on the screen. */
+	visibility: hidden;
 }
 .msg-success {
 	color: green;
+	/* Initialize as invisible so the angular {} syntax will not show on the screen. */
+	visibility: hidden; 
 }
 
 .grid {
@@ -10,6 +31,38 @@
   height: 500px;
 }
 
-fieldset { 
-	display: inline-block;
+#grid
+{
+    text-align: center;
+    width: 100%;
+}
+
+#chart
+{
+    width: 500px;
+    height: 250px;
+}
+
+#wrapper 
+{ 
+	position: relative; 
+}
+
+#map
+{
+	width: 400px;
+	height: 250px;
+}
+
+#map_loading
+{
+	text-align: center;
+	position: absolute; 
+	top: 10px; 
+	left: 10px; 
+	z-index: 99; 
+}
+
+.btn {
+	font-size: 100%;
 }
